// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="sc-bdfBwQ gJiiKn"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="sc-bdfBwQ iouqFE"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="sc-bdfBwQ cMHYof"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a primary color 1`] = `
<div>
  <div
    class="sc-bdfBwQ gJiiKn"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="sc-bdfBwQ frfcBb"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="sc-bdfBwQ joocpg"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="sc-bdfBwQ bMptOl"
    color="warning"
  />
</div>
`;
